# SmartWatch-v2

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  alarm.c  battery_monitor.c  buttons_IO.c  common.h  deep_sleep.c  display_time.c  display_weather.c  esp-esp-comm.c  main.c  ntp_time.c  spi_lcd_touch_example_main.c  stopwatch.c  task_changer.c  weather.c
main/alarm_icons/: alarm_OFF_orange_png.c  alarm_ON_orange_png.c  alarm_orange_png.c
main/bulb_logos/: bulb_off_png.c  bulb_on_png.c
main/charge_icons/: eighty_charge_icon_png.c  fifty_charge_icon_png.c  full_charge_icon_png.c  twenty_charge_icon_png.c
main/signal_icons/: arrow_left_png.c  arrow_right_png.c  play_pause_png.c  reset_png.c
main/stopwatch_icons/: stopwatch_outline_png.c
main/switch_icons/: switch_off_png.c  switch_on_png.c
main/weather_logos/: cloudy_img_png.c  humidity_png.c  rain_img_png.c  snow_img_png.c  sunny_img_png.c  thunderstorm_img_png.c  wind_speed_png.c
