idf_component_register(SRCS main.c 
                            weather_logos/sunny_img_png.c
                            weather_logos/rain_img_png.c
                            weather_logos/cloudy_img_png.c 
                            weather_logos/snow_img_png.c
                            bulb_logos/bulb_on_png.c
                            bulb_logos/bulb_off_png.c
                            ntp_time.c 
                            weather.c 
                            alarm.c 
                            stopwatch.c 
                            task_changer.c 
                            esp-esp-comm.c 
                            buttons_IO.c 
                            deep_sleep.c 
                            battery_monitor.c
            
                       INCLUDE_DIRS ".")
